# torkius-vad

./: .gitignore  LICENSE  README.md  flake.nix  main.py  pyproject.toml
.github/: CODEOWNERS
examples/: model_20260125_183606.pkl  model_20260125_232737.pkl  model_20260127_020627.pkl  model_20260127_082117.pkl  model_20260127_224635.pkl  model_20260128_200942.pkl  model_20260201_001351.pkl  model_20260204_085130.pkl  model_20260204_123450.pkl  model_20260205_043155.pkl  model_20260205_151940.pkl  model_20260205_223523.pkl  results.txt  torkius_vad.ipynb  torkius_vad.ju.py
scripts/: dataset_statistics.sh  download_callhome.py  download_datasets.py  download_datasets_2.py  download_musan.py  download_musan_2.py  download_voxconverse.py  librispeech_asr_validation_clean.py  voxconverse_test.py
src/torkius_vad/plotting/widgets/: __init__.py  player.py
src/torkius_vad/plotting/widgets/_templates/: player_template.html
