[project]
name = "torkius-vad"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "audeer>=2.3.1",
    "datasets>=4.5.0",
    "huggingface-hub>=1.3.2",
    "jupyter-console>=6.6.3",
    "librosa>=0.11.0",
    "matplotlib>=3.10.8",
    "nbclassic>=1.3.3",
    "notebook>=7.5.2",
    "pandas>=2.3.3",
    "plotly>=6.5.2",
    "resampy>=0.4.3",
    "silero-vad>=6.2.0",
    "soundata>=1.0.1",
    "soundfile>=0.13.1",
    "torchcodec>=0.9.1",
]
plotting = [
    "ipython>=9.9.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
torkius_vad = ["**/*.html"]
